# aiochainscan

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REFACTOR.md  BRANCH_READY_SUMMARY.md  CHAIN_AUTOGEN.md  CI_FIXES_SUMMARY.md  ETHERSCAN_V2_NOTE.md  FIXES_SUMMARY.md  GRAPHQL_SUPPORT_PLAN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MORALIS_INTEGRATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  PYPI_PUBLISHING.md  QUICK_START_RU.md  README.md  ROLLBACK_SUCCESS.md  check_quality.sh  instructions.md  pyproject.toml  scanner_methods_detailed.md  scanner_methods_results.json  scanner_methods_summary.md  test_optimized_transactions.py  test_simple_optimized.py
.cursor/rules/: rules.mdc
.github/workflows/: ci.yml  test-install.yml
.kiro/steering/: global_instructions.md
aiochainscan/: __init__.py  aiochainscan_fastabi.pyi  capabilities.py  chains.py  chains.py.backup  cli.py  client.py  common.py  config.py  decode.py  exceptions.py  network.py  provider.py  url_builder.py
aiochainscan/adapters/: __init__.py  aiohttp_client.py  aiohttp_graphql_client.py  blockscout_graphql_builder.py  endpoint_builder_urlbuilder.py  simple_provider_federator.py  simple_rate_limiter.py  structlog_telemetry.py
aiochainscan/core/: __init__.py  client.py  endpoint.py
aiochainscan/domain/: dto.py  models.py
aiochainscan/fastabi/: Cargo.toml
aiochainscan/fastabi/src/: lib.rs
aiochainscan/modules/: account.py  base.py  block.py  contract.py  gas_tracker.py  logs.py  proxy.py  stats.py  token.py  transaction.py
aiochainscan/modules/extra/: utils.py
aiochainscan/ports/: graphql_client.py  graphql_query_builder.py  http_client.py  provider_federator.py
aiochainscan/scanners/: __init__.py  __init__.py.bak  _etherscan_like.py  base.py  basescan_v1.py  blockscout_v1.py  etherscan_v1.py  etherscan_v2.py  moralis_v1.py  routscan_v1.py
aiochainscan/services/: __init__.py  _executor.py  account.py  aggregator.py  block.py  contract.py  fetch_all.py  gas.py  logs.py  pagination.py  paging_engine.py  proxy.py  stats.py  token.py  transaction.py
examples/: README.md  balance_comparison.py  basescan_demo.py  blockscout_demo.py  blockscout_simple_example.py  chain_discovery_demo.py  chain_provider_demo.py  facade_di_logs_stats.py  facade_di_session.py  final_unified_demo.py  multiple_scanners_demo.py  multiple_scanners_demo.py.bak  quick_scanner_check.py  routscan_demo.py  simple_balance_comparison.py  test_decode_functionality.py  test_moralis_demo.py  test_moralis_integration.py  test_scanner_methods.py  test_with_your_keys.md  unified_client_demo.py
scripts/: README.md  generate_chains.py
tests/: conftest.py  test_account.py  test_block.py  test_blockscout_flow.py  test_capabilities.py  test_cli.py  test_config.py  test_contract.py  test_decode.py  test_decode_fastabi.py  test_e2e_balances_live.py  test_exceptions.py  test_gas_tracker.py  test_integration.py  test_logs.py  test_network.py  test_network_retry.py  test_proxy.py  test_stats.py  test_token.py  test_transaction.py  test_unified_client.py  test_url_builder.py  test_utils.py  test_utils_extended.py  test_utils_optimized.py
