[project]
name = "aiochainscan"
version = "0.1.0"
description = "Chainscan API async Python wrapper"
authors = [
    { name = "VaitaR", email = "andrey.shivalin@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "aiohttp>=3.4",
    "asyncio-throttle>=1.0.1",
    "aiohttp-retry>=2.8.3",
    "pycryptodome",
    "eth-abi",
    "curl-cffi>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "SIM", "UP", "N", "C4"]
ignore = [
    "E501",  # Line too long (will be handled by formatter)
    "B904",  # Within an except clause, raise exceptions with raise ... from err
    "N806",  # Variable name should be lowercase (for constants in functions)
    "B018",  # Found useless expression
    "SIM117", # Use a single with statement with multiple contexts (complex refactor)
    "UP035", # typing.AsyncContextManager is deprecated (will fix in next release)
]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
relative_files = true
