[project]
name = "aiochainscan"
version = "0.1.0"
description = "Chainscan API async Python wrapper"
authors = [
    { name = "VaitaR", email = "andrey.shivalin@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
homepage = "https://github.com/VaitaR/aiochainscan"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.4",
    "asyncio-throttle>=1.0.1",
    "aiohttp-retry>=2.8.3",
    "pycryptodome",
    "eth-abi",
    "curl-cffi>=0.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pre-commit>=3.5.0",
    "coveralls>=3.3.1",
    "ruff==0.4.7",
    "mypy",
]
fast = [
    "maturin>=1.6,<2.0",
]

[project.scripts]
aiochainscan = "aiochainscan.cli:main"

[project.urls]
Homepage = "https://github.com/VaitaR/aiochainscan"
Repository = "https://github.com/VaitaR/aiochainscan"
Issues = "https://github.com/VaitaR/aiochainscan/issues"

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "SIM", "UP", "N", "C4"]
ignore = [
    "E501",  # Line too long (will be handled by formatter)
]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
relative_files = true

[tool.maturin]
module-name = "aiochainscan.aiochainscan_fastabi"
manifest-path = "aiochainscan/fastabi/Cargo.toml"
python-source = "aiochainscan"
features = ["pyo3/extension-module"]

[tool.poetry.group.dev.dependencies]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["aiochainscan"]
plugins = []

[[tool.mypy.overrides]]
module = [
  "aiochainscan.modules.extra.*",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "aiochainscan.modules.transaction",
  "aiochainscan.modules.logs",
  "aiochainscan.modules.contract",
  "aiochainscan.modules.token",
  "aiochainscan.modules.stats",
  "aiochainscan.modules.proxy",
  "aiochainscan.modules.gas_tracker",
 "aiochainscan.modules.block",
 "aiochainscan.modules.account",
 "aiochainscan.common",
 "aiochainscan.network",
 "aiochainscan.config",
 "aiochainscan.decode",
 "aiochainscan.scanners.*",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "aiochainscan.aiochainscan_fastabi",
  "aiochainscan_fastabi",
  "eth_abi.*",
  "requests",
]
ignore_missing_imports = true
